[package]
name = "heather"
version = "0.1.0"
edition = "2024"

[features]
default = []
send = ["spin"]
std = ["alloc"]
alloc = []
parking-lot = ["dep:parking_lot", "std"]

[dependencies]
spin = { version = "0.9", default-features = false, features = [
    "rwlock",
], optional = true }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
serde_json = { version = "1" }
