[package]
name = "heather"
version = "0.1.0"
edition = "2024"
keywords = []
categories = ["no-std"]
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
repository = "https://github.com/kildevaeld/heather"
license = "MIT"
readme = "README.md"
description = "Nostd tools"

[features]
# default = ["alloc"]
send = ["spin"]
std = ["alloc"]
alloc = []
parking-lot = ["dep:parking_lot", "std"]

[dependencies]
spin = { version = "0.10", default-features = false, features = [
    "rwlock",
], optional = true }
parking_lot = { version = "0.12", optional = true }
futures-core = { version = "0.3", default-features = false }


[dev-dependencies]
serde_json = { version = "1" }
